--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.3
   flutter_native_splash: ^2.4.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
