--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.1.3
   flutter_native_splash: ^2.4.1
   provider: ^6.1.2
+  go_router: ^14.2.1
 
 dev_dependencies:
   flutter_test:
