--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
       "request": "launch",
       "type": "dart",
       "toolArgs": [
+        "--dart-define-from-file=./.env.json",
         "-d",
         "emulator-5554"
       ],
@@ -19,6 +20,7 @@
       "type": "dart",
       "flutterMode": "release",
       "toolArgs": [
+        "--dart-define-from-file=./.env.json",
         "-d",
         "emulator-5554"
       ]
