--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_native_splash: ^2.4.1
   provider: ^6.1.2
   go_router: ^14.2.1
+  google_mobile_ads: ^5.1.0
 
 dev_dependencies:
   flutter_test:
