--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.2
   go_router: ^14.2.1
   google_mobile_ads: ^5.1.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
