--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.4
+version: 0.0.7
 
 environment:
   sdk: '>=3.4.4 <4.0.0'
@@ -44,6 +44,9 @@ dependencies:
   google_mobile_ads: ^5.1.0
   flutter_screenutil: ^5.9.3
   syncfusion_flutter_calendar: ^26.2.7
+  intl: ^0.19.0
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
