--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,17 @@
       ],
     },
     {
+      "name": "profile mode LDPlayer",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "profile",
+      "toolArgs": [
+        "--dart-define-from-file=./.env.json",
+        "-d",
+        "emulator-5555"
+      ],
+    },
+    {
       "name": "release mode mandalart",
       "request": "launch",
       "type": "dart",
