--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -60,7 +60,7 @@ flutter_native_splash:
     #image: assets/android12splash.png
 
     # Splash screen background color.
-    #color: "#42a5f5"
+    color: "#FFFFFF"
 
     # App icon background color.
     #icon_background_color: "#111111"
