--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "dev mode LDPlayer",
+      "name": "dev mode",
       "request": "launch",
       "type": "dart",
       "toolArgs": [
@@ -15,7 +15,7 @@
       ],
     },
     {
-      "name": "profile mode LDPlayer",
+      "name": "profile mode",
       "request": "launch",
       "type": "dart",
       "flutterMode": "profile",
@@ -26,7 +26,7 @@
       ],
     },
     {
-      "name": "release mode mandalart",
+      "name": "release mode",
       "request": "launch",
       "type": "dart",
       "flutterMode": "release",
